--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "",
-  "version": "",
+  "name": "open-table-app",
+  "version": "1.0.0",
   "description": "",
   "author": "",
+  "main": "client/src/index.js",
   "license": "",
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
+    "react-dev": "webpack -d --watch",
+    "server-dev": "nodemon server/index.js"
   },
   "dependencies": {
+    "express": "^4.16.4",
+    "nodemon": "^1.18.10",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "babel-loader": "^8.0.5",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   }
 }
