--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "seed":"mysql -u root <schema.sql",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
   },
   "dependencies": {
     "express": "^4.16.4",
+    "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
