successfully refactored seeding database

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "seed":"mysql -u root <schema.sql",
+    "seed": "mysql -u root <schema.sql && node database/data.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
   },
   "dependencies": {
+    "eslint": "^5.15.3",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
@@ -25,7 +26,7 @@
     "@babel/preset-env": "^7.4.2",
     "babel-loader": "^8.0.5",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "webpack": "^4.29.6",
+    "webpack": "^v3.12.0",
     "webpack-cli": "^3.3.0"
   }
 }
