--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
   "scripts": {
     "seed": "mysql -u root <schema.sql && node database/data.js",
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
+    "server-dev": "nodemon server/index.js -w database -w server"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^5.15.3",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "webpack": "^2.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^6.4.1",
     "@babel/preset-env": "^7.4.2",
-    "babel-loader": "^8.0.5",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "webpack": "^v3.12.0",
     "webpack-cli": "^3.3.0"
   }
 }
