--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "enzyme": "^3.9.0",
     "eslint": "^5.15.3",
     "express": "^4.16.4",
+    "mocha": "^6.1.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
     "react": "^15.6.1",
@@ -31,6 +32,7 @@
     "react-images": "^0.5.19",
     "react-lightbox-component": "^1.2.1",
     "react-photo-gallery": "^6.3.2",
+    "react-router-dom": "^5.0.0",
     "react-test-renderer": "^16.8.6",
     "supertest": "^4.0.2",
     "webpack": "^2.2.1"
