--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.2.0",
+    "css-loader": "^1.0.1",
     "enzyme": "^3.9.0",
     "eslint": "^5.15.3",
     "express": "^4.16.4",
@@ -33,6 +34,7 @@
     "react-lightbox-component": "^1.2.1",
     "react-photo-gallery": "^6.3.2",
     "react-test-renderer": "^16.8.6",
+    "style-loader": "^0.23.1",
     "supertest": "^4.0.2",
     "webpack": "^2.2.1"
   },
