removed left margin

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "seed": "mysql -u root <schema.sql && node database/data.js",
-    "test": "mocha",
+    "test": "jest",
     "build": "webpack -d --watch",
     "start": "nodemon server/index.js -w database -w server"
   },
@@ -19,12 +19,10 @@
     "babel-jest": "^24.7.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "chai": "^4.2.0",
     "css-loader": "^1.0.1",
     "enzyme": "^3.9.0",
     "eslint": "^5.15.3",
     "express": "^4.16.4",
-    "mocha": "^6.1.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
     "react": "^15.6.2",
