--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-test-renderer": "^16.8.6",
     "style-loader": "^0.23.1",
     "supertest": "^4.0.2",
+    "util": "^0.11.1",
     "webpack": "^2.2.1"
   },
   "devDependencies": {
