--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.1",
+    "csv-write-stream": "^2.0.0",
     "enzyme": "^3.9.0",
     "eslint": "^5.15.3",
     "express": "^4.16.4",
