--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
     "pg": "^7.10.0",
+    "pg-copy-streams": "^2.2.0",
     "react": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^15.6.1",
