adds seed-psql script

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "seed": "mysql -u root <schema.sql && node database/data.js",
+    "seed-psql": "psql -d open_table -f pg-schema.sql",
     "test": "jest",
     "build": "webpack -d --watch",
     "start": "nodemon server/index.js -w database -w server"
