--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "enzyme": "^3.9.0",
     "eslint": "^5.15.3",
     "express": "^4.16.4",
+    "mongoose": "^5.5.3",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
     "pg": "^7.10.0",
